@@ -2,11 +2,14 @@
 Summary of notable changes and features
 
 ## Unreleased (dev)
- - input module rewrite
+ - input module complete rewrite
+   - generic word completion API
+   - add full test coverage
+   - performance and memory usage improvements
 
 ## [0.1.0]
 ### Initial release
-Started in 2014 as a hobby project, rirc has been a fully useable,
+Started in 2013 as a hobby project, rirc has been a fully useable,
 albeit basic, IRC client since it's early inception. This version
 marks an initial release supporting a basic subset of the IRC
 protocol and client management features one would expect in everyday
